
include_directories(${Matlab_INCLUDE_DIRS})
# common mex lib
add_library(mexcommon common.cpp)
qt5_use_modules(mexcommon Core Network)
TARGET_LINK_LIBRARIES(mexcommon Qt5::Core Qt5::Network)

#matlab_add_mex(NAME aw_getprop SRC aw_getproperties.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getdata SRC aw_getdata.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getdataex SRC aw_getdataex.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getmarkers SRC aw_getmarkers.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_addmarkers SRC aw_addmarkers.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getplugininfo SRC aw_getplugininfo.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getpluginio SRC aw_getpluginio.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getfileinfo SRC aw_getfileinfo.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_sendcommand SRC aw_sendcommand.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_gettriggers SRC aw_gettriggers.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_getcapture SRC aw_getcapture.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME aw_captureicapanel SRC aw_captureicapanel.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME AwSendMessage SRC AwSendMessage.cpp LINK_TO mexcommon AwCore)
matlab_add_mex(NAME AwIsProcessTerminated SRC AwIsProcessTerminated.cpp LINK_TO mexcommon AwCore)
IF(NOT APPLE)
#SET_TARGET_PROPERTIES(aw_getprop PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getdata PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getdataex PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getmarkers PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_addmarkers PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getplugininfo PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getpluginio PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getfileinfo PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_sendcommand PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_gettriggers PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_getcapture PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(aw_captureicapanel PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(AwSendMessage PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(AwIsProcessTerminated PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
ELSE()
#SET_TARGET_PROPERTIES(aw_getprop PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getdata PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getdataex PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getmarkers PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_addmarkers PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getplugininfo PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getpluginio PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getfileinfo PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_sendcommand PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_gettriggers PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_getcapture PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(aw_captureicapanel PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(AwSendMessage PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
SET_TARGET_PROPERTIES(AwIsProcessTerminated PROPERTIES INSTALL_RPATH @executable_path/../Frameworks)
ENDIF()
#INSTALL(TARGETS aw_getprop DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getdata DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getdataex DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getmarkers DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_addmarkers DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getplugininfo DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getfileinfo DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getpluginio DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_sendcommand DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_gettriggers DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_getcapture DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS aw_captureicapanel DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS AwSendMessage DESTINATION  ${MEX_INSTALL_DIR})
INSTALL(TARGETS AwIsProcessTerminated DESTINATION  ${MEX_INSTALL_DIR})
